--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/app.css">
     <title>Matrix digital rain</title>
+    <h1> hope u like </h1>
 </head>
 <body>
     <canvas id="Matrix"></canvas>
