added diff stuff

--- a/index.html
+++ b/index.html
@@ -1,15 +1,54 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="css/app.css">
-    <title>Matrix digital rain</title>
-    <h1> hope u like </h1>
+    <title>Professional Bio Page</title>
+    <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
-    <canvas id="Matrix"></canvas>
-    <script src="js/app.js"></script>
-    
+    <div class="header">
+        <div class="header-content">
+            <h1>Welcome to the Red Clouds</h1>
+            <h2>Redcloudish</h2>
+            <img src="assets/images/3932dd2a03b17139293a29aae7b48f1b.png" alt="Your Image">
+        </div>
+    </div>
+    <div class="container">
+        <div class="bio">
+            <h2>Who am i?
+            
+            </h2>
+            <p>
+                Hello! My name is Michael Brown. I am a student learning at trios college , currently residing in Ontario Canada. I have a passion for retro gaming and learning new things , and I am ALWAYS eager to learn new things.
+
+In my free time, you can often find me gaming,learning on how a program works, exploring new places, or spending quality time with my friends and family.
+
+I am excited to embark on this journey of learning HTML, CSS, and other aspects of web development. I believe that with dedication and perseverance, I can acquire the skills needed to create amazing websites and projects.
+
+Feel free to reach out to me ! I'm always open to new opportunities and collaborations.
+
+
+            </p>
+            <p>
+                My journey in the field of technology started during my younger days when I began exploring programming for car computers and
+                building small projects. Over the years, I have grabbed an interest in more complex tasks
+            </p>
+            <p>
+                Apart from my technical pursuits, I enjoy spending time outdoors, playing games , and capturing moments through
+                photography. I believe in the importance of maintaining a balance between work and life, and these activities help me
+                rejuvenate and stay creative.
+            </p>
+            <p>
+                <h3> My Career Goals?</h3>
+                Currently, I am actively seeking new opportunities where I can leverage my skills and contribute to meaningful projects
+                that make a difference in the world.
+            </p>
+        </div>
+    </div>
+    <div class="footer">
+        <div class="footer-content">
+            <img src="assets/images/3932dd2a03b17139293a29aae7b48f1b.png" alt="Your Image">
+        </div>
+    </div>
 </body>
 </html>
